Minor web help updates

--- a/response-tweaker/web-about/index.html
+++ b/response-tweaker/web-about/index.html
@@ -23,7 +23,7 @@
         <li>users</li>
         <li>nested-content</li>
       </u>
-      <p>Both of these object are not editable by default as they are not an supported editable json type. Clicking on the <img class="inline" src="img/art.help.deeper-button.png"/> button or on the row will navigate into that object:</p>
+      <p>Both of these object are not editable by default as they are not an supported editable json type. Clicking on the <img class="inline deeper-button" src="img/art.help.deeper-button.png"/> button or on the row will navigate into that object:</p>
       <img src="img/art.help.2.png"/>
       <p>After we entered the users array we can further get to a single user and alter their properties:</p>
       <img src="img/art.help.3.png"/>
