--- a/response-tweaker/web-about/index.html
+++ b/response-tweaker/web-about/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Auto Responder Tweaker</title>
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
